tests/negative/gold/clashing_field_test.gold
tests/negative/clashing_field_test.toit:7:3: error: Redefinition of 'foo'
  foo := 2
  ^~~
tests/negative/clashing_field_test.toit:6:3: note: First definition of 'foo'
  foo := 1
  ^~~
Compilation failed.
